# win_tools

./: Cargo.toml  build.rs
.github/workflows/: rust.yml
src/: main.rs
ui/: ErrorDialog.slint  InfoDialog.slint  app-window.slint
