[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.12.1"
# windows = "0.61.3"
winreg = "0.52"

[build-dependencies]
slint-build = "1.12.1"
embed-resource = "2.4"
