[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_System_Services",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_System_SystemServices",

] }
winreg = "0.52"
slint = "1.12.1"
chrono = "0.4.41"
[build-dependencies]

slint-build = "1.12.1"
embed-resource = "2.4"
